--- a/css/gwyn.css
+++ b/css/gwyn.css
@@ -15,6 +15,15 @@ h1 {
 	margin:				20px 0;
 }
 
+h1 a {
+	color:				#343434;
+}
+
+h1 a:hover {
+	color:				#343434;
+	text-decoration:	none;
+}
+
 .navbar .nav li {
 	font-family:		sans-serif;
 	width: 				0%;
