--- a/css/gwyn.css
+++ b/css/gwyn.css
@@ -72,7 +72,7 @@ h1 a:hover {
 }
 
 .jumbotron {
-	 margin: 0;
+	 margin: 0 0 30px 0;
 }
 
 .lead {
@@ -81,6 +81,16 @@ h1 a:hover {
 
 p {
 	text-align: justify;
+}
+
+.spotlight-container {
+	text-align: center;
+}
+
+.spotlight-container img {
+	padding-top: 5px;
+	width: 250px;
+	height: 250px;
 }
 
 .gallery-image {
