--- a/css/gwyn.css
+++ b/css/gwyn.css
@@ -38,6 +38,12 @@ h1 a:hover {
 	text-decoration: none;
 }
 
+.navbar .phone {
+	position: absolute;
+	right: 0px;
+	margin-top: 35px;
+}
+
 .navbar .nav li {
 	font-family: sans-serif;
 	font-size: 12px;
