--- a/css/gwyn.css
+++ b/css/gwyn.css
@@ -8,7 +8,7 @@
     font-style: normal;
 }
 
-body {
+.page-container {
 	padding-top: 125px
 }
 
@@ -38,6 +38,36 @@ h1 a:hover {
 	text-decoration: none;
 }
 
+/* CSS declarations for mobile-sized media screens */
+@media (max-width: 767px) {
+	.navbar {
+		margin-right: 20px;
+		margin-left: 20px;
+	}
+}
+
+/* CSS declarations for tablet-sized media screens */
+@media (max-width: 979px) {
+	.page-container {
+		padding-top: 80px
+	}
+	
+	.navbar-fixed-top, .navbar-fixed-bottom {
+		position: fixed;
+	}
+	
+	/* Change the display type of nav items when the navbar is collapsed */
+	.navbar .nav li {
+		display: block;
+	}
+}
+
+.btn-navbar {
+	position: absolute;
+	right: 0px;
+	top: 20px;
+}
+
 .navbar .phone {
 	position: absolute;
 	right: 0px;
@@ -50,13 +80,6 @@ h1 a:hover {
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	font-weight: 600;
-}
-
-/* Change the display type of nav items when the navbar is collapsed */
-@media (max-width: 979px) {
-	.navbar .nav li {
-		display: block;
-	}
 }
 
 .navbar .nav li a {
