--- a/css/gwyn.css
+++ b/css/gwyn.css
@@ -8,6 +8,10 @@
     font-style: normal;
 }
 
+body { 
+	padding-bottom: 30px; 
+}
+
 .page-container {
 	padding-top: 125px
 }
@@ -74,26 +78,27 @@ h1 a:hover {
 	margin-top: 35px;
 }
 
+.navbar .nav {
+	margin: 0;
+	display: table;
+	width: 100%;
+}
+
 .navbar .nav li {
 	font-family: sans-serif;
 	font-size: 12px;
 	letter-spacing: 1px;
 	text-transform: uppercase;
 	font-weight: 600;
+	display: table-cell;
+	float: none;
 }
 
 .navbar .nav li a {
 	color: #343434;
-	border: none;
-	border-bottom: 5px	solid #ffffff;
-}
-
-.navbar .nav li a:first-child {
-	border-radius: 0;
-}
-
-.navbar .nav li a:last-child {
-	border-radius: 0;
+	border-bottom: 5px solid #ffffff;
+	font-weight: bold;
+	text-align: center;
 }
 
 .navbar .nav li a:hover {
