Added Jamie Roberts tweet to testimonials page and removed a few testimonials to keep the height of both vertical containers the same. I had to override the margin attribute definition inherited from Twitter.

--- a/css/gwyn.css
+++ b/css/gwyn.css
@@ -145,6 +145,10 @@ blockquote {
 	height: 344px;
 }
 
+.twitter-tweet {
+	margin: 0 0 30px !important;
+}
+
 /* CSS declarations for mobile-sized media screens */
 @media (max-width: 767px) {
 	.navbar {
